--- a/src/index.html
+++ b/src/index.html
@@ -23,14 +23,14 @@
 
 
   <!-- Global site tag (gtag.js) - Google Ads -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-650026903"></script>
+  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-650026903"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'AW-650026903');
-  </script>
+  </script> -->
 </head>
 
 <body>
