--- a/src/index.html
+++ b/src/index.html
@@ -14,23 +14,20 @@
   <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
-  <!-- <link rel="manifest" href="assets/favicon/site.webmanifest"> -->
+  <link rel="manifest" href="assets/favicon/site.webmanifest">
   <link rel="mask-icon" href="assets/favicon/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="msapplication-TileColor" content="#da532c">
   <meta name="theme-color" content="#ffffff">
 
-
-
-
   <!-- Global site tag (gtag.js) - Google Ads -->
-  <!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-650026903"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-650026903"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'AW-650026903');
-  </script> -->
+  </script>
 </head>
 
 <body>
